<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ogunaydin.restaurantuygulamasi.YemekAlimFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/yemek_tercih"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/et_baslangic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="12sp"
                android:text="@string/yemek_tercihii"/>
            <EditText
                android:id="@+id/et_ana_yemek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="12sp"
                android:text="@string/tatli_tercih"/>
            <EditText
                android:id="@+id/et_tatli"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textSize="12sp"
                android:text="@string/icecek_tercih"/>
            <EditText
                android:id="@+id/et_icecek"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>
        </LinearLayout>


        <Button
            android:id="@+id/btn_ilet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mutfaga_ilet"
            />
    </LinearLayout>

</FrameLayout>
